# aig-opt

./: .gitignore  BENCHMARKS.md  CLAUDE.md  README.md  newfile.txt  pyproject.toml
benchmarks/: benchmark.py  experiment_decompress.py  generate_circuits.py  generate_multipliers.py
benchmarks/circuits/: full_adder.aag  half_adder.aag  mul4_signed.aag  mul4_unsigned.aag  mux2.aag  rand_deep_large.aag  rand_deep_med.aag  rand_deep_xlarge.aag  rand_large_clean.aag  rand_large_redund.aag  rand_med_clean.aag  rand_med_redund.aag  rand_small_clean.aag  rand_small_redund.aag  rand_xlarge_clean.aag  rand_xlarge_redund.aag  redundant.aag
src/aig_opt/: __init__.py  __main__.py  aig.py  aiger.py  balance.py  cli.py  decompress.py  fraig.py  multioutput.py  npn.py  npn4_networks.json  optimizer.py  resub.py  rewriter.py
tests/: test_aiger.py  test_optimizer.py
